# super-manga-panel-admin

./: .gitignore  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
apps/manga/migrations/: 0001_initial.py
apps/manga/models/: models.py
apps/manga/tests/: factories.py  tests.py
supermanga/: asgi.py  settings.py  urls.py  wsgi.py
supermanga/settings/: base.py  dev.py
