[tool.poetry]
name = "super-manga-admin"
version = "0.1.0"
description = ""
authors = ["Carlos Eduardo <suportebeloj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
black = "^22.10.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
